Fix overflows, palette grid

--- a/src/components/palette/ColorIndicator.css
+++ b/src/components/palette/ColorIndicator.css
@@ -3,4 +3,5 @@
   display: grid;
   justify-content: flex-end;
   background-color: black;
+  align-self: start;
 }
