--- a/src/components/palette/Palette.css
+++ b/src/components/palette/Palette.css
@@ -1,9 +1,10 @@
 .palette {
   grid-area: palette;
   display: grid;
-  grid-template-columns: 10px 10px 10px 10px 10px 10px 10px;
-  grid-auto-rows: 10px;
-  grid-auto-flow: row;
-  justify-content: flex-end;
+  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
+  grid-auto-rows: minmax(10px, 1fr);
   background-color: black;
+  align-self: start;
+  height: 100%;
+  justify-content: flex-end;
 }
